Release 0.2 (2012/08/28):

	* mod: env_of_list now fills the environment from left to right
	* add: new exception No_change for callbacks to indicate no change
