@@ -1,3 +1,8 @@
+Next release:
+  * mod: "empty" env now contains the main_ tag remover
+  * fix: all eval functions now remove the main_ tag (because
+    all env now contains the binding to do so by default)
+
 Release 0.2 (2012/08/28):
 
 	* mod: env_of_list now fills the environment from left to right
